--- a/randomizing-machine.yml
+++ b/randomizing-machine.yml
@@ -1,5 +1,5 @@
 random:
-  words: Hello,world,my,priekrasnaja,app,nom
+  words: Heniek,Janusz,Mietek,Paszkin,Lerek,kupa
   numbers: 7,37,23,51,93,33
 eureka:
   client:
