--- a/book-service.yml
+++ b/book-service.yml
@@ -4,7 +4,7 @@ eureka:
       defaultZone: http://localhost:8010/eureka/
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/book-service-cloud=true&useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/book-service-cloud?serverTimezone=Europe/Warsaw&createDatabaseIfNotExist=true
     username: root
     password: root
   jpa:
